--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "web-live",
-  "version": "0.0.1",
+  "name": "@yanxlg/web-live",
+  "version": "0.0.4",
   "description": "",
   "repository": {
     "type": "git",
